--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -53,7 +53,7 @@ body {
 }
 
 .ui.segment.container-block .ui.list {
-	word-break: break-all;
+	word-break: break-word;
 }
 
 .ui.segment.container-block .ui.list .item {
